# distcc

./: .gitignore  .travis.yml  AUTHORS  Brewfile  CMakeLists.txt  Cargo.toml  ChangeLog  DevelopingDistcc.md  INSTALL  Makefile.in  NEWS  ProjectHome.md  README  README.md  README.packaging  README.pump  TODO  build.rs  configure.ac  example-config.h  find_c_extension.sh  meson.build  meson_options.txt  pump.in  run_all_autoconf.sh  rust-valgrind.supp  survey.txt  update-distcc-symlinks.py  version.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/scripts/: test.sh
.github/workflows/: actionlint.yml  c-build.yml  c-cpp.yml  rust.yml
bench/: Build.py  Project.py  ProjectDefs.py  Summary.py  actions.py  benchmark.py  buildutil.py  compiler.py  statistics.py
changes/fergus/add_upload_scripts/trunk/: Makefile.in  autogen.sh  configure.ac  googlecode_upload.py  upload-distcc.sh
changes/fergus/add_upload_scripts/trunk/include_server/: macro_eval_test.py
changes/fergus/add_upload_scripts/trunk/src/: distcc.h  dsignal.c  mon-notify.c  ncpus.c  pump.c  srvnet.c
cmake/: FindAvahi.cmake  FindGSSAPI.cmake  config.h.in  create_config.cmake
contrib/: distcc.sh  distccd-on-servers  stage-cc-wrapper.patch
contrib/redhat/: xinetd
distcc/: ChangeLog  Makefile.in  NEWS  TODO  autogen.sh  configure.ac
distcc/bench/: Build.py  ProjectDefs.py  Summary.py  actions.py
distcc/man/: distcc.1
distcc/src/: clinet.c  distcc.c  exec.c  filename.c  help.c  hosts.c  io.c  tempfile.c  trace.h
doc/: protocol-1.txt  protocol-2.1.txt  protocol-3-impl.txt  protocol-3.txt  protocol-4.txt  reporting-bugs.txt  status-1.txt
doc/example/: init
doc/web/: benchmark.html  compared.html  compilers.html  distcc-green.css  distcc-lca-2004.html  faq.html  index.html  results.html  scenarios.html  security.html
docker/: README.md  build.sh
docker/base/: Dockerfile  apt-conf
docker/compilers/: Dockerfile.clang-3.8  Dockerfile.gcc-4.8  Dockerfile.gcc-5
ftp/: README  distcc-0.10.1.NEWS  distcc-0.10.1.tar.gz.asc  distcc-0.10.tar.gz.asc  distcc-0.11.NEWS  distcc-0.11.tar.gz.asc  distcc-0.12.NEWS  distcc-0.12.tar.gz.asc  distcc-0.13.NEWS  distcc-0.13.tar.gz.asc  distcc-0.14.NEWS  distcc-0.14.tar.gz.asc  distcc-0.15.NEWS  distcc-0.15.tar.gz.asc  distcc-0.3.NEWS  distcc-0.4.NEWS  distcc-0.5.NEWS  distcc-0.5.tar.gz.asc  distcc-0.5.tar.gz.sig  distcc-0.6.NEWS  distcc-0.6.tar.gz.asc  distcc-0.7.NEWS  distcc-0.7.tar.gz.asc  distcc-0.8.NEWS  distcc-0.8.tar.gz.asc  distcc-0.9.NEWS  distcc-0.9.tar.gz.asc  distcc-1.0.NEWS  distcc-1.0.tar.bz2  distcc-1.0.tar.bz2.asc  distcc-1.1.NEWS  distcc-1.1.tar.bz2  distcc-1.1.tar.bz2.asc  distcc-1.2.1.NEWS  distcc-1.2.1.tar.bz2  distcc-1.2.1.tar.bz2.asc  distcc-1.2.2.NEWS  distcc-1.2.2.patch.bz2  distcc-1.2.2.patch.bz2.asc  distcc-1.2.2.tar.bz2  (+116 more)
gnome/: CMakeLists.txt  distccmon-gnome.desktop
include_server/: Makefile.in  basics.py  basics_test.py  c_extensions_test.py  cache_basics.py  compiler_defaults.py  compress_files.py  configure.ac  include_analyzer.py  include_analyzer_memoizing_node.py  include_analyzer_memoizing_node_test.py  include_analyzer_test.py  include_server.py  include_server_test.py  macro_eval.py  macro_eval_test.py  mirror_path.py  mirror_path_test.py  parse_command.py  parse_command_test.py  parse_file.py  parse_file_test.py  run.py  setup.py  statistics.py
include_server/c_extensions/: distcc_pump_c_extensions_module.c
include_server/test_data/: more_macros.c  supported_encoding.cpp
include_server/test_data/dbar/dbar1/: bar.h
include_server/test_data/dfoo/: foo2.h
include_server/test_data/distcc/src/: bulk.h  compile.h  config.h  distcc.c  distcc.h  exitcode.h  hosts.h  implicit.h  state.h  trace.h  util.h
lzo/: .stamp-conf.in  CMakeLists.txt  minilzo.h
m4/: pkg.m4
man/: distcc.1  distccd.1  distccmon-text.1  include_server.1  lsdistcc.1  pump.1
packaging/: googlecode_upload.py
packaging/RedHat/: rpm.spec
popt/: .stamp-conf.in  README.popt  findme.c  findme.h  popt.c  popt.h  poptconfig.c  popthelp.c  poptint.h  poptparse.c  system.h
rust/: README.md  argv.rs  hostlist.rs  lib.rs  malloc.rs
rust/glue/: malloc.rs  mod.rs  trace.rs
rust/rustimpl/: filename.rs  mod.rs
src/: CMakeLists.txt  access.c  access.h  arg.c  argutil.c  auth.h  auth_common.c  auth_distcc.c  auth_distccd.c  backoff.c  bulk.c  bulk.h  cleanup.c  climasq.c  clinet.c  clinet.h  clirpc.c  compile.c  compile.h  compress-zstd.c  compress.c  cpp.c  daemon.c  daemon.h  distcc.c  distcc.h  distcc_rs.h  dopt.c  dopt.h  dotd.c  dotd.h  dparent.c  dsignal.c  emaillog.c  emaillog.h  exec.c  exec.h  exitcode.h  filename.c  fix_debug_info.c  (+71 more)
src/rustimpl/: filename.rs  mod.rs
subprojects/: zstd.wrap
test/: comfychair.py  onetest.py  testdistcc.py
tests/: README.md  c.rs  c_unit_tests.rs
tests/c_tests/: arg_c.rs  argutil_c.rs  compress_c.rs  dotd_c.rs  filename.rs  hosts_c.rs  mod.rs  strip.rs  trace.rs  util_c.rs
trunk/: ChangeLog  INSTALL  Makefile.in  NEWS  README  README.pump  TODO  autogen.sh  build-distcc.sh  configure.ac  distcc.spec  find_c_extension.sh  mkinstalldirs  pump.in  run_all_autoconf.sh  version.sh
trunk/bench/: Build.py  Project.py  ProjectDefs.py  actions.py  benchmark.py  buildutil.py  compiler.py  statistics.py
trunk/distcc/: ChangeLog  ChangeLog.old  INSTALL  Makefile.in  NEWS  README  TODO
trunk/doc/: protocol-3-impl.txt
trunk/include_server/: basics.py  basics_test.py  c_extensions_test.py  cache_basics.py  compiler_defaults.py  compress_files.py  include_analyzer.py  include_analyzer_memoizing_node.py  include_analyzer_memoizing_node_test.py  include_analyzer_test.py  include_server.py  include_server_test.py  mirror_path.py  parse_command.py  parse_command_test.py  parse_file.py  run.py  setup.py
trunk/man/: distcc.1  distccd.1  include_server.1
trunk/packaging/: googlecode_upload.py
trunk/popt/: popthelp.c
trunk/src/: access.c  access.h  arg.c  argutil.c  auth.h  auth_common.c  auth_distccd.c  backoff.c  bulk.h  climasq.c  clinet.c  clinet.h  (+77 more)
wiki/: DevelopingDistcc.wiki  PageName.wiki
(+1040 files in other folders)
