[package]
name = "distcc"
version = "0.0.0"
publish = false
authors = ["Martin Pool"]
edition = "2021"
build = "build.rs"
license = "GPL-2.0-or-later"
include = ["/src"]

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
glob = "0.3"

[dependencies]
libc = "0.2.153"

[dev-dependencies]
tempfile = "3.2"

[[bin]]
name = "distcc-rs"
