[package]
name = "distcc"
version = "0.0.0"
publish = false
authors = ["Martin Pool"]
edition = "2021"
build = "build.rs"
license = "GPL-2.0-or-later"
include = ["/src"]
# Need 1.77 for c"string", <https://github.com/rust-lang/rust/pull/119865>
rust-version = "1.77"

[build-dependencies]
bindgen = "0.69"
cc = { version = "1.0", features = [ "parallel" ] }
glob = "0.3"

[dependencies]
libc = "0.2.153"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
rusty-fork = "0.3"
tempfile = "3.2"
test-log = { version = "0.2.16", features = ["trace"] }

[lib]
path = "rust/lib.rs"

[[bin]]
name = "distcc"
path = "rust/bin/distcc.rs"

[[bin]]
name = "distccd"
path = "rust/bin/distccd.rs"

[profile.release]
panic = "abort" # Avoid unwinding into C

[profile.dev]
panic = "abort" # Avoid unwinding into C
